--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -160,12 +160,12 @@
             <div class="skill-subHeading">
               <p>
                 Hi Everyone My name is Saleem basha shaik and I am a Front Developer. I
-                have been learning  for last 4 Months and Currently I am pursuing my 
+                have been learning  for last 4 Months and Currently ,I am pursuing my 
                 Btech in Mic college.
               </p>
   
               <p>
-                
+                  My Strenghts are i am self-confident,optimistic,quick learner.
               </p>
             </div>
           </div>
